test/compiler_errors/redfine-builtin.lzx

<canvas layout="spacing:10">
   <class name="textfield"/>

   <edittext>
       <method event="onkeyup">
           Debug.write('keyup');
       </method>
   </edittext>

</canvas>
